refactor(server): add missing pack ids in partnership list endpoint
