# server/application/src/main/resources/openapi/documentation.yaml
@@ -3753,11 +3753,23 @@ components:
           type: string
         event_name:
           type: string
-        pack_name:
+        selected_pack_id:
+          type:
+            - string
+            - 'null'
+        selected_pack_name:
+          type:
+            - string
+            - 'null'
+        suggested_pack_id:
           type:
             - string
             - 'null'
         suggested_pack_name:
+          type:
+            - string
+            - 'null'
+        validated_pack_id:
           type:
             - string
             - 'null'
